// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleGroup should render with required props 1`] = `
<div
  className="articlesGroup"
>
  <h2>
    test
  </h2>
  <ul>
    <li>
      <OutboundLink
        analyticsEventLabel="Press Article"
        hasIcon={true}
        href="https://example.com"
        router={
          Object {
            "articles": Array [
              Object {
                "title": "Example",
                "url": "https://example.com",
              },
            ],
            "numberOfInitiallyVisibleLinks": 1,
            "region": "test",
          }
        }
      >
        Example
      </OutboundLink>
    </li>
  </ul>
</div>
`;

exports[`ArticleGroup should render with required props and 3 links and a button 1`] = `
<div
  className="articlesGroup"
>
  <h2>
    test
  </h2>
  <ul>
    <li>
      <OutboundLink
        analyticsEventLabel="Press Article"
        hasIcon={true}
        href="https://example.com"
        router={
          Object {
            "articles": Array [
              Object {
                "title": "Example",
                "url": "https://example.com",
              },
              Object {
                "title": "Example",
                "url": "https://example.com",
              },
              Object {
                "title": "Example",
                "url": "https://example.com",
              },
            ],
            "numberOfInitiallyVisibleLinks": 1,
            "region": "test",
          }
        }
      >
        Example
      </OutboundLink>
    </li>
  </ul>
  <Button
    analyticsObject={
      Object {
        "action": "Button Selected",
        "category": "Interactions",
      }
    }
    aria-pressed={false}
    className="areAllLinksVisibleButton"
    datum=""
    disabled={false}
    fullWidth={false}
    onClick={[Function]}
    tabIndex={0}
    theme="primary"
    type="button"
  >
    Show All
  </Button>
</div>
`;
